# vol-regime-backtester

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  app.py  backtester.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_backtest.py  strategies.py  utils.py
.github/workflows/: ci.yml
notebooks/: exploration.ipynb
tests/: __init__.py  test_strategies.py  test_utils.py
