[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vol-regime-backtester"
version = "0.1.0"
description = "Adaptive Volatility-Regime Systematic Backtesting Framework"
readme = "README.md"
authors = [
    { name = "Shreyas" }
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "matplotlib>=3.4.0",
]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
